--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library for modular authorization of JavaScript applications",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [
     "authorization",
@@ -16,6 +17,12 @@
   "author": "Jiri Chara <jiri@chara.vip>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-react": "^7.23.1",
     "typescript": "^4.2.3"
   }
 }
