--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "keywords": [
     "authorization",
@@ -17,12 +18,17 @@
   "author": "Jiri Chara <jiri@chara.vip>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-react": "^7.23.1",
+    "jest": "^26.6.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
