--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Library for modular authorization of JavaScript applications",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run clean && npm-run-all --parallel lint test tsc",
+    "clean": "rimraf lib",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "tsc": "tsc"
   },
   "keywords": [
     "authorization",
@@ -28,6 +30,8 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-react": "^7.23.1",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
